Improved wording on site, ui/ux tweaks (such as updating the url when loading example data), and added a site link to the readme.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,8 +18,11 @@ hr {
 }
 
 .user-input-row {
-	padding-top: 11px;
 	border-top: thin solid lightgray;
+}
+
+.user-input-row .user-input-container {
+	margin-top: 1.5rem;
 }
 
 input[type="text"],
