Fixed Safari, improved UX.
Fixed bug where safari would not work, due to not acknowledging the 'const' keyword. Updated UI to hide extra info (how it works, hints) until a drop-down is activated. Added hints and clarified how saving works (basically, bookmarking).

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,6 +17,10 @@ hr {
 	margin: 0;
 }
 
+.hidden {
+	display: none;
+}
+
 .user-input-row {
 	padding-top: 1.25rem;
 	border-top: thin solid lightgray;
